--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,26 @@
 {
-    "cleanUrls": true
+  "cleanUrls": true,
+  "trailingSlash": false,
+  "redirects": [
+    {
+      "source": "/index.html",
+      "destination": "/",
+      "permanent": true
+    },
+    {
+      "source": "/sponsors.html",
+      "destination": "/sponsors",
+      "permanent": true
+    },
+    {
+      "source": "/events.html",
+      "destination": "/events",
+      "permanent": true
+    },
+    {
+      "source": "/merch.html",
+      "destination": "/merch",
+      "permanent": true
+    }
+  ]
 }
